[gd_scene load_steps=12 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://interface/theme/font/dynamicfont.tres" type="Theme" id=2]
[ext_resource path="res://interface/theme/font/large.tres" type="Theme" id=3]
[ext_resource path="res://sprites/bg_ruins.png" type="Texture" id=4]
[ext_resource path="res://sprites/sky_bg.png" type="Texture" id=5]
[ext_resource path="res://sprites/new.png" type="Texture" id=6]
[ext_resource path="res://interface/theme/font/small.tres" type="Theme" id=7]
[ext_resource path="res://confirm.tscn" type="PackedScene" id=8]
[ext_resource path="res://Options.tscn" type="PackedScene" id=9]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.357542, 1 )
colors = PoolColorArray( 0, 0, 0, 0.792157, 0, 0, 0, 0.772549, 0, 0, 0, 0.494118 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect3" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1625, 533 )
texture = ExtResource( 5 )
expand = true

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 100.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( -1625, 533 )
texture = ExtResource( 4 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1625, 533 )
texture = ExtResource( 6 )
expand = true

[node name="TextureRect4" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1625, 533 )
texture = SubResource( 2 )
expand = true

[node name="Label" type="Label" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 690.0
margin_bottom = 82.0
theme = ExtResource( 3 )
text = "THE RISE OF THE DEAD"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -34.0
margin_right = 63.0
margin_bottom = 34.0

[node name="startbtn" type="Button" parent="VBoxContainer"]
margin_right = 159.0
margin_bottom = 26.0
focus_neighbour_top = NodePath("../quitbtn")
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.709804, 0.529412, 0.529412, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Start"
flat = true
align = 0

[node name="optionsbtn" type="Button" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 159.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( -599, -281 )
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.709804, 0.529412, 0.529412, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Options"
flat = true
align = 0

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 159.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( -599, -281 )
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.709804, 0.529412, 0.529412, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Credits"
flat = true
align = 0

[node name="quitbtn" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 159.0
margin_bottom = 116.0
focus_neighbour_bottom = NodePath("../startbtn")
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.709804, 0.529412, 0.529412, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Quit"
flat = true
align = 0

[node name="credits" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.764706 )

[node name="Label" type="Label" parent="credits"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 100.0
margin_right = 320.0
margin_bottom = 32.0
theme = ExtResource( 3 )
text = "CREDITS"
align = 1

[node name="Label2" type="Label" parent="credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -102.0
margin_right = 250.0
margin_bottom = 102.0
rect_min_size = Vector2( 500, 0 )
theme = ExtResource( 2 )
text = "The rise of the dead
A solo game
by Clarence Yang

Made for the 2022 Game Off Game Jam
Theme: `Cliche`

Powered by Godot

Thanks for Playing!"
align = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="back" type="Button" parent="credits"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -79.5
margin_top = -100.0
margin_right = 79.5
margin_bottom = -200.0
rect_pivot_offset = Vector2( -599, -281 )
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.709804, 0.529412, 0.529412, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Back"
flat = true

[node name="Label2" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -205.0
margin_top = -49.0
margin_right = -20.0
theme = ExtResource( 7 )
text = "v1.0
Â© 2022 cyang946"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="options" parent="." instance=ExtResource( 9 )]
visible = false

[node name="confirm" parent="." instance=ExtResource( 8 )]
visible = false

[node name="sfx" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="VBoxContainer/startbtn" to="." method="_on_startbtn_pressed"]
[connection signal="pressed" from="VBoxContainer/optionsbtn" to="." method="_on_optionsbtn_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/quitbtn" to="." method="_on_quitbtn_pressed"]
[connection signal="pressed" from="credits/back" to="." method="_on_back_pressed"]
